<resources>
    <string name="app_name">MenuP02_Aula09</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tamanho">"Tamanho da Fonte"</string>
    <string name="cores">"Cores"</string>
    <string name="corFonte">"Cor da Fonte"</string>
    <string name="corTela">"Cor da Tela"</string>
    <string name="abrir">"Calcular IPTU"</string>
    <string name="sair">"Sair"</string>

    <string name="titulo">Calcular IPTU</string>
    <string name="area">Área do Imóvel (m2)</string>
    <string name="opcao">Selecione um tipo de Imóvel</string>
    <string name="calcular">Calcular IPTU</string>
    <string name="valor">Valor: </string>
    <array name="tipos">
        <item>Residencial</item>
        <item>Comercial</item>
        <item>Industrial</item>
    </array>


</resources>