<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.menup02_aula09.MainActivity">
    <item
        android:id="@+id/op_tamanho"
        android:title="@string/tamanho"
        app:showAsAction="never" />
    <item
        android:id="@+id/op_Cor"
        android:title="@string/cores">
        <menu>
            <item
                android:id="@+id/op_corTela"
                android:title="@string/corTela"/>
            <item
                android:id="@+id/op_corFonte"
                android:title="@string/corFonte"/>
        </menu>
    </item>
    <item
        android:id="@+id/op_abrir"
        android:title="@string/abrir"/>
    <item
        android:id="@+id/op_sair"
        android:title="@string/sair"
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        app:showAsAction="always"/>

</menu>